# project-fontr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  log.txt  pyproject.toml  setup.cfg
.github/workflows/: black.yml  documentation.yml  mypy.yml  static.yml
conf/: README.md
conf/base/: catalog.yml  parameters.yml  sagemaker.yml
conf/base/parameters/: bcf_preprocessing.yml  data_bcf_preprocessing.yml  data_processing.yml  data_science.yml
docs/source/: conf.py
fontr/: pyproject.toml
fontr/conf/base/: logging.yml
fontr/docs/source/: index.rst
fontr/src/: requirements.txt  setup.py
fontr/src/tests/: test_run.py
src/: requirements-test-only.txt  requirements.txt
src/fontr/: __init__.py  __main__.py  datasets.py  pipeline_registry.py  settings.py
src/fontr/fontr/: autoencoder.py  classification_model.py  classifier.py  logger.py  transforms.py
src/fontr/pipelines/: nodes.py
src/fontr/pipelines/bcf_preprocessing/: __init__.py  nodes.py  pipeline.py
src/fontr/pipelines/data_processing/: nodes.py  pipeline.py
src/fontr/pipelines/data_science/: nodes.py  pipeline.py  transformers.py
src/tests/: conftest.py  test_autoencoder.py  test_classifier.py
