[tool.poetry]
name = "fontr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fontr", from = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
kedro = ">=0.18.6,<0.19.0"
kedro-datasets = {version = ">=1.0.0,<1.3.0", extras = ["pandas-csvdataset", "pandas-exceldataset", "pandas-parquetdataset"]}
isort = ">=5.0,<6.0"
kedro-telemetry = ">=0.2.0,<0.3.0"
kedro-viz = ">=5.0,<=6.0"
nbstripout = ">=0.4,<1.0"
scikit-learn = ">=1.0,<2.0"
kedro-sagemaker = "^0.3.0"
kedro-mlflow = "^0.11.8"
pre-commit = "^3.2.1"
pytorch-lightning = "^2.0.1.post0"
torch = "^2.0.0"
torchvision = "^0.15.1"

[tool.poetry.group.test.dependencies]
pytest-cov = ">=4.0,<5.0"
pytest-mock = ">=3.10.0,<4.0"
mypy = "^1.2.0"
black = ">=23.0,<24.0"
flake8 = ">=6.0.0,<7.0"
pytest = ">=7.2,<8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "fontr"
project_name = "FontR"
kedro_init_version = "0.18.7"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/fontr -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
