[tool.poetry]
name = "fontr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fontr", from = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
kedro = ">=0.18.6,<0.19.0"
kedro-datasets = {version = ">=1.0.0,<1.3.0", extras = ["pandas-csvdataset", "pandas-exceldataset", "pandas-parquetdataset"]}
isort = ">=5.0,<6.0"
kedro-telemetry = ">=0.2.0,<0.3.0"
kedro-viz = ">=5.0,<=6.0"
nbstripout = ">=0.4,<1.0"
scikit-learn = ">=1.0,<2.0"
kedro-sagemaker = "^0.3.0"
kedro-mlflow = "^0.11.8"
pre-commit = "^3.2.1"
pytorch-lightning = "^2.0.1.post0"
torch = "^2.0.0"
torchvision = "^0.15.1"
gdrivefs = {git = "https://github.com/fsspec/gdrivefs.git"}
lxml-stubs = "^0.4.0"
pandas-stubs = "^2.0.1.230501"
types-pillow = "^9.5.0.2"
types-pyyaml = "^6.0.12.9"
types-pygments = "^2.15.0.0"
types-colorama = "^0.4.15.11"
types-decorator = "^5.1.8.3"
types-jsonschema = "^4.17.0.7"
types-psutil = "^5.9.5.12"
types-pywin32 = "^306.0.0.1"
types-regex = "^2023.5.5.0"
types-setuptools = "^67.7.0.1"
types-six = "^1.16.21.8"
types-tabulate = "^0.9.0.2"
types-tqdm = "^4.65.0.1"
types-typed-ast = "^1.5.8.6"

[tool.poetry.group.test.dependencies]
pytest-cov = ">=4.0,<5.0"
pytest-mock = ">=3.10.0,<4.0"
mypy = "^1.2.0"
black = ">=23.0,<24.0"
flake8 = ">=6.0.0,<7.0"
pytest = ">=7.2,<8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "fontr"
project_name = "FontR"
kedro_init_version = "0.18.7"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/fontr -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
